--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL="mongodb+srv://chiragsuryavanshi01:Chirags@0104@cluster0.gy1in8s.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL="mongodb+srv://chiragsuryavanshi01:Chirags%400104@cluster0.gy1in8s.mongodb.net/?retryWrites=true&w=majority"
