--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
